<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minWidth="300dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="8dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_category"
        android:textSize="16sp"
        android:layout_marginBottom="8dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_category_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        app:counterEnabled="true"
        app:counterMaxLength="@integer/name_max_length"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_category_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_category_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/short_info"
        app:counterEnabled="true"
        app:counterMaxLength="@integer/info_max_length">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_category_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"/>

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:gravity="end">

        <TextView
            android:id="@+id/tv_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/cancel"
            android:textStyle="bold"
            android:layout_marginEnd="16dp"/>

        <TextView
            android:id="@+id/tv_add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/add"
            android:textColor="#0000ff"
            android:textStyle="bold"/>

    </LinearLayout>

</LinearLayout>