<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".View.SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivBackSettings"
            android:layout_width="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:src="@drawable/icon_back"
            android:contentDescription="@string/back" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tbSettings"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:title="@string/settings"/>

    </LinearLayout>

<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:orientation="vertical">-->

<!--        <TextView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/on_startup"-->
<!--            android:paddingHorizontal="8dp"-->
<!--            style="@style/SettingsItemTitleBold"/>-->

<!--        <com.example.homebudget.View.CustomView.SettingsItem-->
<!--            android:id="@+id/siDashboard"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            app:title="This is the main idea"-->
<!--            app:state="true"/>-->

<!--        <com.example.homebudget.View.CustomView.SettingsItem-->
<!--            android:id="@+id/siPlans"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            app:title="This is the main idea"-->
<!--            app:state="true"/>-->

<!--    </LinearLayout>-->


    <LinearLayout
        android:id="@+id/ll_show_on_startup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_show_on_startup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/on_startup"
            android:paddingHorizontal="8dp"
            style="@style/SettingsItemTitleBold"/>

        <RadioGroup
            android:id="@+id/rg_show_on_startup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp">

            <RadioButton
                android:id="@+id/rb_both_show"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/SettingsItemTitleNormal"
                android:text="@string/both_dashboard_plan_screens"/>

            <RadioButton
                android:id="@+id/rb_dashboard_show"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/SettingsItemTitleNormal"
                android:text="@string/dashboard_screen"/>

            <RadioButton
                android:id="@+id/rb_plans_show"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/SettingsItemTitleNormal"
                android:text="@string/plans_screen"/>

        </RadioGroup>

    </LinearLayout>

</LinearLayout>