<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".View.GetInActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbGetIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/app_name"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name" />

        <EditText
            android:id="@+id/etEnterName"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_name"
            android:importantForAutofill="no"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/btnGetIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_in" />

    </LinearLayout>

</LinearLayout>