<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:openDrawer="start"
    android:id="@+id/dlDashboard"
    tools:context=".View.HomeActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/llAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentTop="true">

            <ImageView
                android:id="@+id/ivHamburgerMenu"
                android:layout_width="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:src="@drawable/icon_hamburger_menu"
                android:contentDescription="@string/menu" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/tbDashboard"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:title="@string/app_name"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/llAppBar"
            android:orientation="vertical">

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/frgDashboard"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                tools:name="com.example.homebudget.View.FragmentView.DashboardFragment"
                tools:layout="@layout/fragment_dashboard" />

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/frgPlans"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                tools:name="com.example.homebudget.View.FragmentView.PlansFragment"
                tools:layout="@layout/fragment_plans" />

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="16dp"
            android:src="@drawable/icon_add"
            app:fabSize="auto"
            android:contentDescription="@string/add" />

    </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nvDashboard"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:headerLayout="@layout/drawer_header"
        app:menu="@menu/drawer_menu"
        android:layout_gravity="start">

    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>